@@ -408,6 +408,28 @@ public class Testbed: GLib.Object {
     }
 
     /**
+     * umockdev_testbed_add_from_file:
+     * @self: A #UMockdevTestbed.
+     * @path: Path to file with description of the device(s) as generated with umockdev-record
+     * @error: return location for a GError, or %NULL
+     *
+     * Add a set of devices to the testbed from a textual description. This
+     * reads a file with the format generated by the umockdev-record tool, and
+     * is mostly a convenience wrapper around
+     * @umockdev_testbed_add_from_string.
+     *
+     * Returns: %TRUE on success, %FALSE if the @path cannot be read or thhe
+     *          data is invalid and an error occurred.
+     */
+    public bool add_from_file (string path) throws UMockdev.Error, FileError
+    {
+        string contents;
+
+        FileUtils.get_contents(path, out contents);
+        return this.add_from_string(contents);
+    }
+
+    /**
      * umockdev_testbed_uevent:
      * @self: A #UMockdevTestbed.
      * @devpath: The full device path, as returned by #umockdev_testbed_add_device()
